# secret-santa

./: README.md  THE-BIG-RED-BUTTON.py  main.py  pyproject.toml  send.py  test_send.py
secret_santa/processing/: command_line.py  file_actions.py  run.py  scoring.py
